# concord-rcanopus

./: CMakeLists.txt  README.md  private_replica_0  private_replica_1  private_replica_2  private_replica_3  readme.md
bftengine/src/bftengine/: FullCommitProofMsg.cpp  PartialProofsSet.cpp  ReplicaImp.cpp  ReplicaImp.hpp  SimpleClient.cpp
bftengine/tests/: CMakeLists.txt
bftengine/tests/config/: config_file_parser_test.cpp  test_parameters.hpp
bftengine/tests/membership_service/: CMakeLists.txt  Makefile  client.cpp  couchdbxx.hpp  membership.grpc.pb.cc  membership.grpc.pb.h  membership.pb.cc  membership.pb.h  replica.cpp
bftengine/tests/membership_service/scripts/: gencert.sh  sample_config.txt  setup.sh
bftengine/tests/membership_service/scripts/couchdb_scripts/: byzantine_groups.json  configuration.json  emulators.json  public_keys.json  quorum_size.json  super_leafs.json
bftengine/tests/membership_service/scripts/go_client/membership/: membership.pb.go  membership.proto
bftengine/tests/membership_service/scripts/go_client/membership_client/: individual_operations.go  read_operations.go  write_operations.go
bftengine/tests/simpleTest/: CMakeLists.txt  Client_dependencies.cpp  client.cpp  client_before_char.cpp  replica.cpp  replica_before_char.cpp  replica_original.cpp
bftengine/tests/simpleTest/scripts/: check.go  configuration.ini  sample_config.txt  scripts  setup.sh
bftengine/tests/simpleTest/scripts/couchdb_scripts/: byzantine_groups.json  emulators.json  output  populate.sh  public_keys.json  quorum_size.json
bftengine/tests/simpleTest/scripts/go_client/membership_client/: main.go  read_operations.go  write_operations.go
bftengine/tests/simpleTest/scripts/src/helloworld/greeter_client/: main.go
